--- a/packages/react-dom/package.json
+++ b/packages/react-dom/package.json
@@ -32,21 +32,25 @@
     "server.js",
     "server.browser.js",
     "server.node.js",
+    "server.bun.js",
     "test-utils.js",
     "unstable_testing.js",
     "cjs/",
-    "umd/"
+    "umd/",
+    "esm/"
   ],
   "exports": {
     ".": "./index.js",
     "./client": "./client.js",
     "./server": {
+      "bun": "./server.bun.js",
       "deno": "./server.browser.js",
       "worker": "./server.browser.js",
       "browser": "./server.browser.js",
       "default": "./server.node.js"
     },
     "./server.browser": "./server.browser.js",
+    "./server.bun": "./server.bun.js",
     "./server.node": "./server.node.js",
     "./profiling": "./profiling.js",
     "./test-utils": "./test-utils.js",
